--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "version": 2,
   "builds": [{ "src": "api/index.py", "use": "@vercel/python" }],
-  "routes": [    
+  "routes": [
+    { "src": "/static/(.*)", "dest": "staticfiles/$1" },
     { "src": "/(.*)", "dest": "api/index.py" }
   ]
 }
