--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "buildCommand": "./build.sh",
   "builds": [
     {
       "src": "manager/wsgi.py",
@@ -9,7 +10,8 @@
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "dest": "/staticfiles/$1",
+      "continue": true
     },
     {
       "src": "/(.*)",
